--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -16,3 +16,6 @@ provisioner:
   name: ansible
   playbooks:
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
+  inventory:
+    links:
+      hosts: inventory
