--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -97,3 +97,4 @@
   ansible.builtin.wait_for:
     port: "{{ (blocky__ports_dns | string | ansible.builtin.split(':') | last) if ':' in blocky__ports_dns | string else blocky__ports_dns }}"
     delay: 5
+  when: blocky__readiness_check_enabled
