--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           - v0.22
           - v0.21
         playbook:
-          - converge
+          - converge.yml
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
