--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -85,6 +85,56 @@
         that: blocky__config_template is defined
         fail_msg: "No config template found for requested blocky version {{ blocky__version }}! That version might not be supported by this role!"
 
+- name: "Inline blocklists: Create dict with inline blocklist goups"
+  ansible.builtin.set_fact:
+    __blocky__blocking_inline_blocklist_files: "{{ __blocky__blocking_inline_blocklist_files | default({}) |
+                                                  ansible.builtin.combine({item.key: [blocky__install_path + '/blocklist_' + item.key + '.txt']}) }}"
+  with_items: "{{ blocky__blocking_inline_blacklists | dict2items }}"
+
+- name: "Inline blocklists: Store inline blocklists as file"
+  ansible.builtin.copy:
+    dest: "{{ item.value | first }}"
+    content: "{{ blocky__blocking_inline_blacklists[item.key] | join('\n') }}"
+    owner: root
+    group: root
+    mode: '0640'
+  when:
+    - blocky__blocking_inline_blacklists[item.key] is defined
+    - blocky__blocking_inline_blacklists[item.key] | length > 0
+  with_items: "{{ __blocky__blocking_inline_blocklist_files | default({}) | dict2items }}"
+
+- name: "Inline blocklists: Merge explicitly configured and inline blocklist groups"
+  ansible.builtin.set_fact:
+    blocky__blocking_blacklists: "{{ blocky__blocking_blacklists | ansible.builtin.combine(__blocky__blocking_inline_blocklist_files,
+                                                                                             list_merge='append', recursive=true) }}"
+  when:
+    - __blocky__blocking_inline_blocklist_files | length > 0
+
+- name: "Inline allowlists: Create dict with inline allowlist goups"
+  ansible.builtin.set_fact:
+    __blocky__blocking_inline_allowlist_files: "{{ __blocky__blocking_inline_allowlist_files | default({}) |
+                                                  ansible.builtin.combine({item.key: [blocky__install_path + '/allowlist_' + item.key + '.txt']}) }}"
+  with_items: "{{ blocky__blocking_inline_whitelists | dict2items }}"
+
+- name: "Inline allowlists: Store inline allowlists as file"
+  ansible.builtin.copy:
+    dest: "{{ item.value | first }}"
+    content: "{{ blocky__blocking_inline_whitelists[item.key] | join('\n') }}"
+    owner: root
+    group: root
+    mode: '0640'
+  when:
+    - blocky__blocking_inline_whitelists[item.key] is defined
+    - blocky__blocking_inline_whitelists[item.key] | length > 0
+  with_items: "{{ __blocky__blocking_inline_allowlist_files | default({}) | dict2items }}"
+
+- name: "Inline allowlists: Merge explicitly configured and inline allowlist groups"
+  ansible.builtin.set_fact:
+    blocky__blocking_whitelists: "{{ blocky__blocking_whitelists | ansible.builtin.combine(__blocky__blocking_inline_allowlist_files,
+                                                                                             list_merge='append', recursive=true) }}"
+  when:
+    - __blocky__blocking_inline_allowlist_files | length > 0
+
 - name: Configure blocky
   ansible.builtin.template:
     src: "{{ blocky__config_template }}"
