--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Python 3.
         uses: actions/setup-python@v6
         with:
-          python-version: 3.x
+          python-version: '3.13'  # Can't go to 3.14+ until Ansible 13.x
 
       - name: Install test dependencies.
         run: pip3 install ansible ansible-lint
@@ -42,16 +42,9 @@ jobs:
       fail-fast: false
       matrix:
         distro:
-          - debian12
-          # Temporarily disabled due to "sudo: A password is required" error, see https://github.com/geerlingguy/docker-rockylinux9-ansible/issues/6
-          #- rockylinux9
+          - debian13
         blocky_version:
-          - v0.26
-          - v0.25
-          - v0.24
-          - v0.23
-          - v0.22
-          - v0.21
+          - v0.28.2
         playbook:
           - converge.yml
     steps:
@@ -63,10 +56,10 @@ jobs:
       - name: Set up Python 3.
         uses: actions/setup-python@v6
         with:
-          python-version: "3.x"
+          python-version: '3.13'  # Can't go to 3.14+ until Ansible 13.x
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule molecule-docker docker
+        run: pip3 install ansible molecule molecule-plugins[docker] docker
 
       - name: Run Molecule tests.
         run: molecule test
