--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -20,13 +20,20 @@
       ansible.builtin.apt:
         update_cache: true
         cache_valid_time: 600
-      when: ansible_os_family == "Debian"
+      when: ansible_facts.os_family == "Debian"
       changed_when: false
 
-    - name: Define blocky version
-      ansible.builtin.set_fact:
-        blocky__version: "{{ lookup('ansible.builtin.env', 'MOLECULE_BLOCKY_VERSION') }}"
-      when: lookup('ansible.builtin.env', 'MOLECULE_BLOCKY_VERSION') | length > 0
+    - name: Wait for systemd to complete initialization.  # noqa 303
+      command: systemctl is-system-running
+      register: systemctl_status
+      until: >
+        'running' in systemctl_status.stdout or
+        'degraded' in systemctl_status.stdout
+      retries: 30
+      delay: 5
+      when: ansible_facts.service_mgr == 'systemd'
+      changed_when: false
+      failed_when: systemctl_status.rc > 1
 
   roles:
     - role: ngine_io.blocky_dns
